# data-engineering-portfolio

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: main.py  requirements.txt
config/: init.sql  logging.conf
docs/: architecture.md  deployment.md
producer/: main.py  requirements.txt
scripts/: setup.sh
src/api/: config.py  database.py  main.py  routes.py
src/producer/: config.py  generator.py  main.py
src/streaming/: config.py  main.py
streaming/: main.py  requirements.txt
tests/: test_api.py  test_generator.py  test_producer.py
