[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clickstream-pipeline"
version = "1.0.0"
description = "Real-time clickstream data pipeline with Kafka, Spark Structured Streaming, PostgreSQL, and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ameer Asaad", email = "amirasaadprog@gmail.com"}]
keywords = ["data-engineering", "kafka", "spark", "clickstream", "real-time", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg2-binary>=2.9",
    "confluent-kafka>=2.5",
    "Faker>=28",
    "pydantic>=2",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]
streaming = ["pyspark>=3.5"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
